cc_library(
    name = "solution",
    srcs = ["solution.cpp"],
    hdrs = ["solution.h"],
    deps = [ 
        "@abseil-cpp//absl/container:flat_hash_map",
    ]

)

cc_test(
    name = "solution_test",
    size = "small",
    srcs = ["solution_test.cpp"],
    deps = [
        ":solution",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ]
)